# agentic-sisnna

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE-AGENTIC.md  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml
agents/: experts.py  experts.yaml  pipeline.py  router.py  synthesizer.py
agents/prompts/: experto_compliance.md  experto_df.md  experto_formatos.md  experto_legal.md  experto_rdf.md  experto_triaje.md
app/: db.py  main.py  schemas.py
app/formats/: loader.py  validate.py
app/rag/: generate.py  retriever.py
app/security/: audit.py  gateway.py  pii_types.py  vault.py
app/triage/: clasificar.py
app/web/: index.html
cli/: chat.py
eval/: README.md  expert_eval.py  gold_questions.yaml  pii_noleak.yaml  pipeline_eval.py  routing_eval.py  routing_set.yaml  run_eval.py
formats/: FORMATS-SPEC.md  _meta-schema.yaml  anexo-02.yaml  resolucion-04.yaml
ingest/: chunk.py  embed.py  load.py  sources.py
kg/: graphrag.py  instances.yaml  ontology.yaml  store.py
migrations/: 0001_init.sql
mock/: README.md  casos_sinteticos.yaml
scripts/: demo.sh
tests/: conftest.py  test_api.py  test_audit.py  test_chunk.py  test_experts.py  test_formats.py  test_kg.py  test_pii_noleak.py  test_router.py  test_synthesizer.py  test_vault.py
