[project]
name = "sisnna-poc-chatbot"
version = "0.1.0"
description = "PoC chatbot SISNNA — agentic GraphRAG + MoE con gateway PII"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "anthropic>=0.39",
  "jinja2>=3.1",
  "cryptography>=42",
  "httpx>=0.27",            # cliente DB: Insforge REST (rawsql) + Anthropic
  # Embeddings (local, multilingüe) — ONNX, sin torch
  "fastembed>=0.4",
  # PII
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML", "types-jsonschema"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
